# spag

./: .gitignore  Makefile  Makefile.am  README  autogen.sh  configure.ac  machine.cpp  machine.h  main.cpp  rule.cpp  rule.h  state.cpp  state.h
doc/: classes.dia
spag/: Makefile.am  machine.cpp  machine.h  rule.h  spag.h  state.cpp  state.h
src/: Makefile.am  machine.cpp  machine.h  spag.cpp
