AC_INIT(spag, 0.1.1, alexandre@quessy.net, spag)
AC_PREREQ(2.53)
AC_COPYRIGHT(GNU General Public License)
AC_CONFIG_SRCDIR(cofig.h)
AM_INIT_AUTOMAKE([$PACKAGE_TARNAME], [$PACKAGE_VERSION])
AC_PROG_CXX
#AC_LIBTOOL_WIN32_DLL
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL
ROOT_PATH
AC_CONFIG_FILES(
    Makefile
    src/Makefile)
AC_OUTPUT

