AUTOMAKE_OPTIONS = gnu
AM_CPPFLAGS = -I@ROOTINCDIR@
pkglib_LTLIBRARIES = libspag.la 
pkginclude_HEADERS = config.h 
# noinst_HEADERS = MyLinkDef.hh 
libspag_la_SOURCES = \
	machine.cpp \
	machine.h \
	rule.cpp \
	rule.h \
	spag.cpp \
	spag.h \
	state.cpp \
	state.h
libspag_la_LDFLAGS = -version 0:0:0 

